TODO some more workers in the new ECS cluster

--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -45,7 +45,9 @@ Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
   IsPrimaryRegion: !Equals [!Ref RegionMode, Primary]
   HasAuroraEndpoint: !Not [!Equals [!Ref SharedAuroraPostgresqlEndpoint, ""]]
-  EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
+  # TODO: re-enable when we move off the old stacks
+  # EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
+  EnableWorkers: !Equals ['true', 'false']
 
 Resources:
   Constants:
