--- a/stacks/apps/remix.yml
+++ b/stacks/apps/remix.yml
@@ -40,9 +40,7 @@ Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
   IsPrimaryRegion: !Equals [!Ref RegionMode, Primary]
   HasAuroraEndpoint: !Not [!Equals [!Ref SharedAuroraPostgresqlEndpoint, ""]]
-  # TODO: re-enable when we move off the old stacks
-  # EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
-  EnableWorkers: !Equals ['true', 'false']
+  EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
 
 Resources:
   WildcardHostHeaderListenerRule:
