Reenable ID service condition

--- a/stacks/apps/id.yml
+++ b/stacks/apps/id.yml
@@ -35,7 +35,7 @@ Parameters:
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
-  # HasAuroraEndpoint: !Not [!Equals [!Ref SharedAuroraMysqlEndpoint, ""]]
+  HasAuroraEndpoint: !Not [!Equals [!Ref SharedAuroraMysqlEndpoint, ""]]
 
 Resources:
   HostHeaderListenerRule:
@@ -114,7 +114,7 @@ Resources:
 
   EcsService:
     Type: AWS::ECS::Service
-    # TODO Condition: HasAuroraEndpoint # See README
+    Condition: HasAuroraEndpoint # See README
     Properties:
       Cluster: !Ref EcsClusterArn
       DeploymentConfiguration:
