--- a/stacks/shared-vpc/public-network-acl.yml
+++ b/stacks/shared-vpc/public-network-acl.yml
@@ -308,6 +308,33 @@ Resources:
       RuleAction: allow
       RuleNumber: 151
 
+  # EGRESS 170
+  # Allows outbound SMTP traffic to all IPs
+  OutboundIpV4SmtpNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: true
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 587
+        To: 587
+      Protocol: 17 # UDP
+      RuleAction: allow
+      RuleNumber: 170
+  OutboundIpV6SmtpNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      Egress: true
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 587
+        To: 587
+      Protocol: 17 # UDP
+      RuleAction: allow
+      RuleNumber: 171
+
   # EGRESS 160
   # Allows outbound NTP traffic to all IPs
   OutboundIpV4NtpNetworkAclEntry:
