--- a/stacks/apps/play.yml
+++ b/stacks/apps/play.yml
@@ -235,7 +235,7 @@ Resources:
               Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
-            - Name: LOGO_NAME # Remove from secrets
+            - Name: LOGO_NAME
               Value: prx
           Essential: true
           Image: !Ref EcrImageTag
