--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -802,6 +802,7 @@ Resources:
         CloudWatchLogGroupTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.CloudWatchLogGroupTaggerServiceToken
         SharedEcsAsgInstanceSecurityGroupId: !GetAtt SharedEcsAsgSecurityGroupStack.Outputs.InstanceSecurityGroupId
         DeploymentPackageBucketName: !GetAtt Constants.DeploymentPackageBucketName
+        CmsHostname: !GetAtt Constants.CmsHostname
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
         DovetailRouterHostname: !GetAtt Constants.DovetailRouterHostname
