Copy some ID values from secrets to task def

--- a/stacks/apps/id.yml
+++ b/stacks/apps/id.yml
@@ -228,6 +228,12 @@ Resources:
               Value: !GetAtt SesSendingSmtpCredentials.UserName
             - Name: SMTP_PASSWORD
               Value: !GetAtt SesSendingSmtpCredentials.Password
+            - Name: CMS_HOST # Remove from secrets
+              Value: !Ref CmsHostname
+            - Name: NEW_RELIC_NAME # Remove from secrets
+              Value: !If [IsProduction, id.prx.org, id.prx.org (Staging)]
+            - Name: DATABASE_POOL_SIZE # Remove from secrets
+              Value: "5"
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
