Add Castle Postgres groups

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -170,6 +170,9 @@ Resources:
         AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
         EcsClusterArn: !Ref EcsClusterArn
         VpcId: !Ref VpcId
+        VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
+        VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
+        VpcPrivateSubnet3Id: !Ref VpcPrivateSubnet3Id
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref CastleEcrImageTag
         SecretsVersion: !Ref CastleSecretsVersion
@@ -184,6 +187,7 @@ Resources:
         CastleRdsPostgresqlEndpoint: !Ref CastleRdsPostgresqlEndpoint
         SharedRedisReplicationGroupEndpointAddress: !Ref SharedRedisReplicationGroupEndpointAddress
         SharedRedisReplicationGroupEndpointPort: !Ref SharedRedisReplicationGroupEndpointPort
+        SharedEcsAsgInstanceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
