Shift ALB rule priority

--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -47,7 +47,7 @@ Conditions:
   HasAuroraEndpoint: !Not [!Equals [!Ref SharedAuroraPostgresqlEndpoint, ""]]
   # TODO: re-enable when we move off the old stacks
   # EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
-  EnableWorkers: !Equals ['true', 'false']
+  EnableWorkers: !Equals ["true", "false"]
 
 Resources:
   Constants:
@@ -67,7 +67,7 @@ Resources:
           Values:
             - augury.*
       ListenerArn: !Ref AlbHttpsListenerArn
-      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "00"]]
+      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "01"]]
 
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
