--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -1128,6 +1128,7 @@ Resources:
                   - lambda:*
                   - logs:*
                   - ram:*
+                  - rds:*
                   - resource-groups:*
                   - route53:*
                   - sns:*
