--- a/stacks/serverless/dovetail-counts-lambda.yml
+++ b/stacks/serverless/dovetail-counts-lambda.yml
@@ -3,7 +3,7 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: Dovetail counts lambda function
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
-  # HasRedisBackupUrl: !Not [!Equals [!Ref RedisBackupUrl, ""]]
+  HasRedisBackupUrl: !Not [!Equals [!Ref RedisBackupUrl, ""]]
 Parameters:
   OpsWarnMessagesSnsTopicArn:
     Type: String
@@ -37,8 +37,8 @@ Parameters:
     Type: AWS::SSM::Parameter::Value<String>
   KinesisOut:
     Type: AWS::SSM::Parameter::Value<String>
-  # RedisBackupUrl:
-  #   Type: AWS::SSM::Parameter::Value<String>
+  RedisBackupUrl:
+    Type: AWS::SSM::Parameter::Value<String>
   RedisUrl:
     Type: AWS::SSM::Parameter::Value<String>
   S3Bucket:
@@ -105,7 +105,7 @@ Resources:
           ARRANGEMENTS_DDB_REGION: !Ref ArrangementsDynamodbRegion
           ARRANGEMENTS_DDB_TABLE: !Ref ArrangementsDynamodbTable
           KINESIS_IMPRESSION_STREAM: !Ref KinesisOut
-          # REDIS_BACKUP_URL: !If [HasRedisBackupUrl, !Ref RedisBackupUrl, !Ref "AWS::NoValue"]
+          REDIS_BACKUP_URL: !If [HasRedisBackupUrl, !Ref RedisBackupUrl, !Ref "AWS::NoValue"]
           REDIS_URL: !Ref RedisUrl
           S3_BUCKET: !Ref S3Bucket
           S3_PREFIX: !Ref S3Prefix
