Move staging pingbacks

--- a/stacks/apps/dovetail-analytics.yml
+++ b/stacks/apps/dovetail-analytics.yml
@@ -635,11 +635,12 @@ Resources:
       Environment:
         Variables:
           PINGBACKS: "true"
+          PROCESS_AFTER: !If [IsStaging, "1634766000", ""]
       Events:
         KinesisTrigger:
           Properties:
             BatchSize: 25
-            Enabled: false # TODO
+            Enabled: !If [IsStaging, true, false] # TODO
             StartingPosition: LATEST
             Stream: !Ref MetricsKinesisStreamArn
           Type: Kinesis
