--- a/stacks/serverless/analytics-ingest-lambdas.yml
+++ b/stacks/serverless/analytics-ingest-lambdas.yml
@@ -160,6 +160,7 @@ Resources:
       Environment:
         Variables:
           PINGBACKS: "true"
+          PROCESS_UNTIL: !If [IsStaging, "1634766000", ""]
       Handler: index.handler
       MemorySize: 2048
       Role: !GetAtt AnalyticsLambdaExecutionIAMRole.Arn
@@ -213,7 +214,7 @@ Resources:
     Type: "AWS::Lambda::EventSourceMapping"
     Properties:
       BatchSize: 100
-      Enabled: true
+      Enabled: !If [IsStaging, false, true]
       EventSourceArn: !Ref MetricsKinesisStream
       FunctionName: !Ref AnalyticsBigqueryLambdaFunction
       StartingPosition: "LATEST"
