--- a/stacks/serverless/analytics-ingest-lambdas.yml
+++ b/stacks/serverless/analytics-ingest-lambdas.yml
@@ -188,6 +188,7 @@ Resources:
           REDIS_TTL: "7200"
           REDIS_IMPRESSIONS_HOST: !Ref RedisImpressionsHost
           REDIS_IMPRESSIONS_TTL: "90000"
+          PROCESS_UNTIL: !If [IsStaging, "1634768100", ""]
       Handler: index.handler
       MemorySize: 512
       Role: !GetAtt AnalyticsLambdaExecutionIAMRole.Arn
@@ -230,7 +231,7 @@ Resources:
     Type: "AWS::Lambda::EventSourceMapping"
     Properties:
       BatchSize: 25
-      Enabled: true
+      Enabled: !If [IsStaging, false, true]
       EventSourceArn: !Ref MetricsKinesisStream
       FunctionName: !Ref AnalyticsPingbacksLambdaFunction
       StartingPosition: "LATEST"
