Move staging dynamodb

--- a/stacks/apps/dovetail-analytics.yml
+++ b/stacks/apps/dovetail-analytics.yml
@@ -358,11 +358,12 @@ Resources:
           DDB_TABLE: !Ref DynamoDbTableName
           DDB_ROLE: !Ref DynamoDbAccessRoleArn
           DDB_TTL: !Ref DynamoDbTtl
+          PROCESS_AFTER: !If [IsStaging, "1634769180", ""]
       Events:
         KinesisTrigger:
           Properties:
             BatchSize: 50
-            Enabled: false # TODO
+            Enabled: !If [IsStaging, true, false] # TODO
             StartingPosition: LATEST
             Stream: !Ref DynamoDbKinesisStreamArn
           Type: Kinesis
