--- a/stacks/serverless/analytics-ingest-lambdas.yml
+++ b/stacks/serverless/analytics-ingest-lambdas.yml
@@ -136,6 +136,7 @@ Resources:
           DDB_TABLE: !Ref DynamodbTableName
           DDB_ROLE: !Ref DynamodbAccessRole
           DDB_TTL: !Ref DynamodbTTL
+          PROCESS_UNTIL: !If [IsStaging, "1634769180", ""]
       Handler: index.handler
       MemorySize: 512
       Role: !GetAtt AnalyticsLambdaExecutionIAMRole.Arn
@@ -239,7 +240,7 @@ Resources:
     Type: "AWS::Lambda::EventSourceMapping"
     Properties:
       BatchSize: 100
-      Enabled: true
+      Enabled: !If [IsStaging, false, true]
       EventSourceArn: !Ref MetricsKinesisStream
       FunctionName: !Ref AnalyticsRedisLambdaFunction
       StartingPosition: "LATEST"
