Missed some DB envs

--- a/stacks/container-apps/sphinx-nlb.yml
+++ b/stacks/container-apps/sphinx-nlb.yml
@@ -431,7 +431,7 @@ Resources:
             - Name: MEMCACHED_PORT_11211_TCP_PORT
               Value: !Ref SharedMemcachedEndpointPort
             - Name: DB_PORT_3306_TCP_ADDR
-              Value: !If [IsStaging, !Ref SharedAuroraMysqlEndpoint, !Ref SharedRdsMysqlEndpoint]
+              Value: !Ref SharedAuroraMysqlEndpoint
             - Name: DB_PORT_3306_TCP_PORT
               Value: "3306"
           Essential: true
