Pass Castle DB parameters to Castle stack

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -66,6 +66,8 @@ Parameters:
   CastleSecretsVersion: { Type: String }
   CastleSharedAlbListenerRulePriorityPrefix: { Type: String }
   CastleRdsPostgresqlEndpoint: { Type: String }
+  CastlePostgresUsername: { Type: String }
+  CastlePostgresUserPassword: { Type: String, NoEcho: true }
 
   DovetailCdnOriginRequestLambdaCodeS3ObjectKey: { Type: String }
 
@@ -141,6 +143,8 @@ Resources:
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
         CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         CastleRdsPostgresqlEndpoint: !Ref CastleRdsPostgresqlEndpoint
+        CastlePostgresUsername: !Ref CastlePostgresUsername
+        CastlePostgresUserPassword: !Ref CastlePostgresUserPassword
         SharedRedisReplicationGroupEndpointAddress: !Ref SharedRedisReplicationGroupEndpointAddress
         SharedRedisReplicationGroupEndpointPort: !Ref SharedRedisReplicationGroupEndpointPort
         SharedEcsAsgInstanceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
