--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -32,6 +32,8 @@ Parameters:
   AlbListenerRulePriorityPrefix: { Type: String }
   SecretsStackName: { Type: String }
   CastleRdsPostgresqlEndpoint: { Type: String }
+  CastlePostgresUsername: { Type: String }
+  CastlePostgresUserPassword: { Type: String, NoEcho: true }
   SharedRedisReplicationGroupEndpointAddress: { Type: String }
   SharedRedisReplicationGroupEndpointPort: { Type: String }
   SharedEcsAsgInstanceSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
