--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -922,6 +922,8 @@ Resources:
         CastleSecretsVersion: !Ref CastleSecretsVersion
         CastleSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Castle, prefix]
         CastleRdsPostgresqlEndpoint: !Ref CastleRdsPostgresqlEndpoint
+        CastlePostgresUsername: !Ref CastlePostgresUsername
+        CastlePostgresUserPassword: !Ref CastlePostgresUserPassword
 
         DovetailCdnOriginRequestLambdaCodeS3ObjectKey: !Ref DovetailCdnOriginRequestCodeS3ObjectKey
 
