Make Castle DBs not publicly accessible

--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -352,7 +352,7 @@ Resources:
       PerformanceInsightsRetentionPeriod: !If [IsProduction, 7, !Ref "AWS::NoValue"]
       PreferredBackupWindow: 08:00-08:30
       PreferredMaintenanceWindow: tue:06:15-tue:06:45
-      PubliclyAccessible: true
+      PubliclyAccessible: false
       StorageType: gp2
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
