Use inline Castle DB in staging

--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -225,8 +225,10 @@ Resources:
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
             - Name: PG_HOST
-              Value: !Ref CastleRdsPostgresqlEndpoint
-              # TODO Value: !GetAtt PostgresInstance.Endpoint.Address
+              Value: !If
+                - IsProduction
+                - !Ref CastleRdsPostgresqlEndpoint
+                - !GetAtt PostgresInstance.Endpoint.Address
             - Name: REDIS_HOST
               Value: !Ref SharedRedisReplicationGroupEndpointAddress
             - Name: REDIS_PORT
