Add Castle DB output

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -398,6 +398,8 @@ Outputs:
 
   CastleTargetGroupFullName:
     Value: !GetAtt CastleStack.Outputs.TargetGroupFullName
+  CastlePostgresInstanceEndpointAddress:
+    Value: !GetAtt CastleStack.Outputs.PostgresInstanceEndpointAddress
 
   FeederVanityAlbDomain:
     Value: !GetAtt FeederStack.Outputs.VanityAlbDomain
