--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -393,3 +393,5 @@ Resources:
 Outputs:
   TargetGroupFullName:
     Value: !GetAtt TargetGroup.TargetGroupFullName
+  PostgresInstanceEndpointAddress:
+    Value: !GetAtt PostgresInstance.Endpoint.Address
