Pass Castle DB endpoint param to Augury stack

--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -36,6 +36,7 @@ Parameters:
   SharedRedisReplicationGroupEndpointPort: { Type: String }
   SharedAuroraPostgresqlEndpoint: { Type: String }
   SharedAuroraPostgresqlPort: { Type: String }
+  CastlePostgresInstanceEndpointAddress: { Type: String }
   CastleHostname: { Type: String }
   CorporateHostname: { Type: String }
   ExchangeHostname: { Type: String }
@@ -58,45 +59,46 @@ Parameters:
   ProxyLambdaCodeS3ObjectKey: { Type: String }
 
 Resources:
-  # AuguryStack:
-  #   Type: AWS::CloudFormation::Stack
-  #   Properties:
-  #     NotificationARNs:
-  #       - !Ref CloudFormationNotificationArn
-  #     Parameters:
-  #       AlbFullName: !Ref AlbFullName
-  #       AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
-  #       EcsClusterArn: !Ref EcsClusterArn
-  #       VpcId: !Ref VpcId
-  #       SecretsBase: !Ref SecretsBase
-  #       EcrImageTag: !Ref AuguryEcrImageTag
-  #       SecretsVersion: !Ref AugurySecretsVersion
-  #       AlbListenerRulePriorityPrefix: !Ref AugurySharedAlbListenerRulePriorityPrefix
-  #       SecretsStackName: !Ref SecretsStackName
-  #       EnvironmentType: !Ref EnvironmentType
-  #       EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
-  #       RegionMode: !Ref RegionMode
-  #       RootStackName: !Ref RootStackName
-  #       RootStackId: !Ref RootStackId
-  #       EchoServiceToken: !Ref EchoServiceToken
-  #       CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
-  #       CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
-  #       VpcPublicSubnet1Id: !Ref VpcPublicSubnet1Id
-  #       VpcPublicSubnet2Id: !Ref VpcPublicSubnet2Id
-  #       VpcPublicSubnet3Id: !Ref VpcPublicSubnet3Id
-  #       SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
-  #       SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
-  #     Tags:
-  #       - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-  #       - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-  #       - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-  #       - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-  #       - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-  #       - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-  #       - { Key: prx:dev:family, Value: Dovetail }
-  #       - { Key: prx:dev:application, Value: Augury }
-  #     TemplateURL: !Sub ${TemplateUrlPrefix}/augury.yml
-  #     TimeoutInMinutes: 20
+  AuguryStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        AlbFullName: !Ref AlbFullName
+        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref AuguryEcrImageTag
+        SecretsVersion: !Ref AugurySecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref AugurySharedAlbListenerRulePriorityPrefix
+        SecretsStackName: !Ref SecretsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RegionMode: !Ref RegionMode
+        RootStackName: !Ref RootStackName
+        RootStackId: !Ref RootStackId
+        EchoServiceToken: !Ref EchoServiceToken
+        CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
+        VpcPublicSubnet1Id: !Ref VpcPublicSubnet1Id
+        VpcPublicSubnet2Id: !Ref VpcPublicSubnet2Id
+        VpcPublicSubnet3Id: !Ref VpcPublicSubnet3Id
+        SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
+        SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
+        CastlePostgresInstanceEndpointAddress: !Ref CastlePostgresInstanceEndpointAddress
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Augury }
+      TemplateURL: !Sub ${TemplateUrlPrefix}/augury.yml
+      TimeoutInMinutes: 20
 
   DovetailAnalyticsStack:
     Type: AWS::CloudFormation::Stack
