--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -40,6 +40,7 @@ Parameters:
   VpcPublicSubnet3Id: { Type: AWS::EC2::Subnet::Id }
   SharedAuroraPostgresqlEndpoint: { Type: String }
   SharedAuroraPostgresqlPort: { Type: String }
+  CastlePostgresInstanceEndpointAddress: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
