Upgrade redis instance types

--- a/stacks/shared-redis.yml
+++ b/stacks/shared-redis.yml
@@ -68,7 +68,7 @@ Resources:
       AtRestEncryptionEnabled: false
       AutomaticFailoverEnabled: true
       AutoMinorVersionUpgrade: false
-      CacheNodeType: !If [IsProduction, cache.t3.medium, cache.t3.micro]
+      CacheNodeType: !If [IsProduction, cache.m6g.large, cache.t3.small]
       CacheParameterGroupName: default.redis6.x.cluster.on
       CacheSubnetGroupName: !Ref RedisSubnetGroup
       Engine: Redis
