Add Castle DB port output

--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -395,3 +395,5 @@ Outputs:
     Value: !GetAtt TargetGroup.TargetGroupFullName
   PostgresInstanceEndpointAddress:
     Value: !GetAtt PostgresInstance.Endpoint.Address
+  PostgresInstanceEndpointPort:
+    Value: !GetAtt PostgresInstance.Endpoint.Port
