--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -400,6 +400,8 @@ Outputs:
     Value: !GetAtt CastleStack.Outputs.TargetGroupFullName
   CastlePostgresInstanceEndpointAddress:
     Value: !GetAtt CastleStack.Outputs.PostgresInstanceEndpointAddress
+  CastlePostgresInstanceEndpointPort:
+    Value: !GetAtt CastleStack.Outputs.PostgresInstanceEndpointPort
 
   FeederVanityAlbDomain:
     Value: !GetAtt FeederStack.Outputs.VanityAlbDomain
