--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -238,6 +238,7 @@ Resources:
       IdHostname: !If [IsProduction, id.prx.org, id.staging.prx.tech]
       MetricsHostname: !If [IsProduction, metrics.prx.org, metrics.staging.prx.tech]
       PlayHostname: !If [IsProduction, play.prx.org, play.staging.prx.tech]
+      AdFilesHostname: a.prxu.org
 
   # Root stacks
   ServerlessRootStack:
