Pass params to Augury stack

--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -30,6 +30,7 @@ Parameters:
   CloudWatchAlarmTaggerServiceToken: { Type: String }
   CloudWatchLogGroupTaggerServiceToken: { Type: String }
   VpcId: { Type: AWS::EC2::VPC::Id }
+  NewRelicApiKeyPrxLite: { Type: String }
   SecretsBase: { Type: String }
   EcrImageTag: { Type: String }
   AlbListenerRulePriorityPrefix: { Type: String }
@@ -41,6 +42,10 @@ Parameters:
   SharedAuroraPostgresqlEndpoint: { Type: String }
   SharedAuroraPostgresqlPort: { Type: String }
   CastlePostgresInstanceEndpointAddress: { Type: String }
+  CastlePostgresInstanceEndpointPort: { Type: String }
+  AdFilesHostname: { Type: String }
+  FeederHostname: { Type: String }
+  IdHostname: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
