--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -73,6 +73,7 @@ Resources:
         AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
         EcsClusterArn: !Ref EcsClusterArn
         VpcId: !Ref VpcId
+        NewRelicApiKeyPrxLite: !Ref NewRelicApiKeyPrxLite
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref AuguryEcrImageTag
         SecretsVersion: !Ref AugurySecretsVersion
@@ -92,6 +93,10 @@ Resources:
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
         SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
         CastlePostgresInstanceEndpointAddress: !Ref CastlePostgresInstanceEndpointAddress
+        CastlePostgresInstanceEndpointPort: !Ref CastlePostgresInstanceEndpointPort
+        AdFilesHostname: !Ref AdFilesHostname
+        FeederHostname: !Ref FeederHostname
+        IdHostname: !Ref IdHostname
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
