--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -269,6 +269,18 @@ Resources:
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: POSTGRES_PORT
               Value: !Ref SharedAuroraPostgresqlPort
+            - Name: UPLOAD_ADFILE_SECRET_ACCESS_KEY
+              Value: !GetAtt S3SigningAccessKey.SecretAccessKey
+            - Name: UPLOAD_ADFILE_ACCESS_KEY_ID
+              Value: !Ref S3SigningAccessKey
+            - Name: UPLOAD_ADFILE_AWS_REGION
+              Value: us-east-1 # TODO Multi region?
+            - Name: UPLOAD_ADFILE_BUCKET
+              Value: prx-mrr-us-east-1-ad-files # TODO Multi region?
+            - Name: UPLOAD_ADFILE_BUCKET_DOMAIN
+              Value: prx-mrr-us-east-1-ad-files.s3.us-east-1.amazonaws.com # TODO Multi region?
+            - Name: UPLOAD_ADFILE_PUBLIC_ACCESS_HOST
+              Value: !Ref AdFilesHostname
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -494,18 +506,6 @@ Resources:
               Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
-            - Name: UPLOAD_ADFILE_SECRET_ACCESS_KEY
-              Value: !GetAtt S3SigningAccessKey.SecretAccessKey
-            - Name: UPLOAD_ADFILE_ACCESS_KEY_ID
-              Value: !Ref S3SigningAccessKey
-            - Name: UPLOAD_ADFILE_AWS_REGION
-              Value: us-east-1
-            - Name: UPLOAD_ADFILE_BUCKET
-              Value: prx-mrr-us-east-1-ad-files
-            - Name: UPLOAD_ADFILE_BUCKET_DOMAIN
-              Value: prx-mrr-us-east-1-ad-files.s3.us-east-1.amazonaws.com
-            - Name: UPLOAD_ADFILE_PUBLIC_ACCESS_HOST
-              Value: a.prxu.org
             - Name: POSTGRES_HOST
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: POSTGRES_PORT
